--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -45,7 +45,9 @@ javascript:
   notification: "Running JavaScript"
   src:
     - "!assets/js/all.js"
-    - "assets/js/agency.js"
+    - "assets/js/menuscroll.js"
+  #  - "assets/js/test.js"
+  #  - "assets/js/agency.js"
   #  - "assets/js/app.js"
 
 
