--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,26 @@
-# Ignore default temp mac files
+### General Apple things to ignore ###
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+### Files that might appear in the root of a volume ###
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+### Directories potentially created on remote AFP share ###
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
 # Ignore jekyll _site build folder
 _site
