Remove /img/logos/ dir and place contents up a dir in /img/
Fix resulting broken img links in clients.html module

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ node_modules/
 
 # Ignore gem lock to avoid mac/windows discrepencies
 Gemfile.lock
+
+# Ignore adobe directory containing working illustrator, photoshop, 
