Add adobe/ dir for working assets file. Ignore adobe/ dir
Delete travis.yml

Change hero banner to athletics theme

--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,8 @@ node_modules/
 # Ignore gem lock to avoid mac/windows discrepencies
 Gemfile.lock
 
-# Ignore adobe directory containing working illustrator, photoshop, 
+# Ignore adobe directory containing working illustrator, photoshop,
+assets/adobe/
+assets/adobe/*
+/adobe/
+adobe/*
