Ignore all javascript for compiling

--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -45,9 +45,8 @@ javascript:
   notification: "Running JavaScript"
   src:
     - "!assets/js/all.js"
-    - "! assets/js/menuscroll.js"
-    - "assets/js/megamenu.js"
-  #  - "assets/js/test.js"
+    - "!assets/js/megamenu.js"
+    - "assets/js/test.js"
   #  - "assets/js/agency.js"
   #  - "assets/js/app.js"
 
