Add athletics.js to src for gulp javascript compiling

--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -47,6 +47,7 @@ javascript:
     - "!assets/js/all.js"
     - "!assets/js/megamenu.js"
     - "assets/js/test.js"
+    - "assets/js/athletics.js"
   #  - "assets/js/agency.js"
   #  - "assets/js/app.js"
 
