--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,37 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
 title: KCC Athletics
+collections:
+  posts:
+    title: Posts
+    output: true
+  releases:
+    title: Releases
+    output: true
+  uploads:
+    title: Uploads
+    output: true
+defaults:
+- scope:
+    path: ''
+    type: posts
+  values:
+    layout: post
+    permalink: "/posts/:title/"
+- scope:
+    path: ''
+    type: pages
+  values:
+    layout: page
+- scope:
+    path: ''
+    type: releases
+  values:
+    layout: news-page
+    title:
+    description:
+    news-release_date:
+    release_thumb_path: "/siteicon.png"
+    for_media: true
+    expires_date:
 permalink: pretty
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
