Update docs/ dir with --production build
Production build has dropdown-menu:hover animation

--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,10 @@ exclude:
   - "node_modules"
   - "npm-debug.log"
   - "package.json"
+  - "package-lock.json"
   - "README.md"
   - "Gemfile"
   - "Gemfile.lock"
   - "gulpconfig.yml"
   - "/docs/"
+  - "yarn.lock"
