Return autoprefixer's browser compatibilty to point to gulpconfig.yml.
Add autoprefixer 'defaults' value to browser compatibility.

gulp-autoprefixer has been verified as working and prefixes based off of
"last 2 versions", "ie >= 9", and gulp-autoprefixer's "default" value.

--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -31,6 +31,7 @@ sass:
   compatibility:
     - "last 2 versions"
     - "ie >= 9"
+    - "defaults"
   dest:
     jekyllRoot: "assets/css/"
     buildDir: "_site/assets/css/"
