--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -49,6 +49,7 @@ javascript:
     - "!assets/js/megamenu.js"
     - "assets/js/test.js"
     - "assets/js/athletics.js"
+    - "assets/js/sliders.js"
   #  - "assets/js/agency.js"
   #  - "assets/js/app.js"
 
