Adjust .navbar  background-size's height by adding height value.
Navbar background was not tall enough compared to mockup-graphics
Was: .navbar { background-size: 3840px }
Now: .navbar { background-size: 3840px 271px}

--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -47,7 +47,7 @@ javascript:
   src:
     - "!assets/js/all.js"
     - "!assets/js/megamenu.js"
-    - "assets/js/test.js"
+    - "!assets/js/test.js"
     - "assets/js/athletics.js"
     - "assets/js/sliders.js"
   #  - "assets/js/agency.js"
