Add schedule.js, youtube-carousel.js, & init.js to JS compile src
Change athletics.js to be omited from JS compile

--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -48,11 +48,11 @@ javascript:
     - "!assets/js/all.js"
     - "!assets/js/megamenu.js"
     - "!assets/js/test.js"
-    - "assets/js/athletics.js"
+    - "!assets/js/athletics.js"
     - "assets/js/sliders.js"
-  #  - "assets/js/agency.js"
-  #  - "assets/js/app.js"
-
+    - "assets/js/schedule.js"
+    - "assets/js/youtube-carousel.js"
+    - "assets/js/init.js"
 
 jekyll:
   notification: "Running jekyll"
