Give the site a title: value

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: KCC Athletics
+title: "Kankakee Community College"
 collections:
   news:
     title: News
@@ -32,9 +32,7 @@ defaults:
 permalink: pretty
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
