--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -73,5 +73,6 @@ watch:
     - "_news/**/*.*"
     - "about/**/*.*"
     - "support/**/*.*"
+    - "facilities/**/*.*"
     - "!_site/**/*.*"
     - "!assets/**/*.*"
