Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ collections:
   news:
     title: News
     output: true
+    _hide_content: true
   baseball_new:
     title: News
     output: true
