Add all landing page dir folders to gulp watch task

--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -72,7 +72,13 @@ watch:
     - "_news/*.*"
     - "_news/**/*.*"
     - "about/**/*.*"
-    - "support/**/*.*"
+    - "baseball/**/*.*"
     - "facilities/**/*.*"
+    - "mens-basketball/**/*.*"
+    - "soccer/**/*.*"
+    - "softball/**/*.*"
+    - "support/**/*.*"
+    - "volleyball/**/*.*"
+    - "womens-basketball/**/*.*"
     - "!_site/**/*.*"
     - "!assets/**/*.*"
