Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ defaults:
     title: ''
     permalink: /:categories/:title/
     baseurl: ../../../
+    categories: news
 - scope:
     path: ''
     type: releases
