--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -66,7 +66,7 @@ jekyll:
 watch: # 'Watch' for changes in all the following:
   images: "assets/img/**/*"
   javascript:
-    - "assets/js/all.js"
+    - "assets/js/all.min.js"
     - "assets/js/*.js"
   sass: "assets/scss/**/*.scss"
   pages:
