--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,9 @@ exclude:
   - "yarn.lock"
   - "/assets/adobe/"
 
+uploads_dir: # specifies the default uploads directory for CloudCannon
+  - "uploads/"
+
 _comments:
   layout: Do NOT modify layouts. It may break things.
   baseurl: Do NOT modify baseurl. It WILL break all page links.
