--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-imagemin": "^3.2.0",
     "gulp-rsync": "0.0.7",
     "gulp-sass": "^3.1.0",
+    "gulp-sitemap": "^5.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.1.2",
     "jquery": "^3.2.1",
