--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -41,6 +41,18 @@ sass:
   notification: "Running Sass"
   src: "assets/scss/main.scss"
 
+contentSass:
+  # Autoprefixer will make sure your CSS works with these browsers
+  compatibility:    # These are pretty standard autoprefixer compatibility settings
+    - "last 2 versions"
+    - "ie >= 9"
+    - "defaults"
+  dest:
+    jekyllRoot: "assets/css/"
+    buildDir: "_site/assets/css/"
+  notification: "Running contentSass"
+  src: "assets/scss/content.scss"
+
 javascript:
   dest:
     jekyllRoot: "assets/js/"
