Put contentSass into gulp-watch task. Add broswersync reload to sass task...
Addition to gulp's watch task was needed to find changes to the content.scss

browserSync.reload was not on the sass watch task:
browserSync.reload added to sass watch to inject sass changes into browser without needing to click browser reload button.

--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -92,6 +92,7 @@ watch: # 'Watch' for changes in all the following:
     - "assets/js/all.min.js"
     - "assets/js/*.js"
   sass: "assets/scss/**/*.scss"
+  contentSass: "assets/scss/**/*.scss"
   pages:
     - "*.{md,html,yml,xml}"
     - "{_data,_includes,_layouts,_pages,_posts,_alerts}/**/*.{md,html,yml,xml}"
