--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -19,14 +19,15 @@ copy:
   # We copy all JS and SCSS because Google Chrome Inspect will tell you where the style is located within the sass structure.
   assets:
     # all files below the assets dir
-    # everything gets copied to site build becuase some JS files are linked directly into pages and not compiled into all.min.js)
-    - "assets/**/*"
-    # exclusions: (Don't copy these items because they are handled by other gulp tasks)
-    - "!assets/{js,scss,css}/**/*"   # js, scss and css files
-    - "!assets/css{,/**}"            # css dir
-    - "!assets/js{,/**}"             # js dir
-    - "!assets/scss{,/**}"           # scss dir
-  dist: "_site/assets/"
+    - "assets/img/*.*"
+# exclusions: (Don't copy these items because they are handled by other gulp tasks)
+  #  - "!assets/{js,scss,css}/**/*"   # js, scss and css files
+  #  - "!assets/css{,/**}"            # css dir
+  #  - "!assets/js{,/**}"             # js dir
+  #  - "!assets/scss{,/**}"           # scss dir
+  #  - "!assets/js/*.js"
+  #  - "!assets/js/**/*.js"
+  dist: "_site/assets/img/"
   notification: "Running Copy"
 
 sass:
@@ -55,46 +56,103 @@ contentSass:
 
 javascript:
   dest:
-    jekyllRoot: "assets/js/"
-    buildDir: "_site/assets/js/"
+    jekyllRoot: "assets/js/custom/"
+    buildDir: "_site/assets/js/custom/"
   filename: "all.min.js"
   notification: "Running JavaScript"
   src:
     # Exclusions: (!exclaim to exclude)
-    - "!assets/js/all.js"
-    - "!assets/js/schedule-pages.js" # needed for schedule pages only
-    - "!assets/js/initSchedulePage.js" # needed to initiate schedules (used in schedule-page-script.html)
-    - "!assets/js/lazyLoadOnly.js" # needed to lazyload on pages with no youtube slider (youtube-carousel.js calls the lazyload function on those pages)
-    - "!assets/js/StickyTableHeader.js" # Small sticky table header jquery library for on schedule pages only
-    - "!assets/js/StickyTableCustom.js" # Custom JS to initiate the afforementioned small sticky table header jquery library
-    - "assets/js/sliders.js" # custom slick slider JS
-    - "assets/js/schedule.js" # Custom JS for schedule pages
-    - "assets/js/youtube-carousel.js" # Custom JS for YouTube video carousel
-    - "assets/js/init.js" # Initiate the schedule.js
-    - "assets/js/lazyload.js" # lazload.js called within youtube-carousel.js
-    - "!assets/js/accordian.js"
+  #  - "!assets/js/all.js"
+  #  - "!assets/js/schedule-pages.js" # needed for schedule pages only
+  #  - "!assets/js/initSchedulePage.js" # needed to initiate schedules (used in schedule-page-script.html)
+  #  - "!assets/js/lazyLoadOnly.js" # needed to lazyload on pages with no youtube slider (youtube-carousel.js calls the lazyload function on those pages)
+  #  - "!assets/js/StickyTableHeader.js" # Small sticky table header jquery library for on schedule pages only
+  #  - "!assets/js/StickyTableCustom.js" # Custom JS to initiate the afforementioned small sticky table header jquery library
+    - "assets/js/custom/sliders.js" # custom slick slider JS
+    - "assets/js/custom/schedule.js" # Custom JS for schedule pages
+    - "assets/js/custom/youtube-carousel.js" # Custom JS for YouTube video carousel
+    - "assets/js/custom/init.js" # Initiate the schedule.js
+    - "assets/js/custom/lazyload.js" # lazload.js called within youtube-carousel.js
+  #  - "!assets/js/accordian.js"
 
 javascriptCustom:
   dest:
-    jekyllRoot: "assets/js/"
-    buildDir: "_site/assets/js/"
-  filename: "noScript.min.js"
+    jekyllRoot: "assets/js/minimal/"
+    buildDir: "_site/assets/js/minimal/"
+  filename: "minimal.min.js"
   notification: "Running JavaScript"
   src:
-    # Exclusions: (!exclaim to exclude)
-    - "!assets/js/all.js"
-    - "!assets/js/schedule-pages.js" # needed for schedule pages only
-    - "!assets/js/initSchedulePage.js" # needed to initiate schedules (used in schedule-page-script.html)
-    - "!assets/js/lazyLoadOnly.js" # needed to lazyload on pages with no youtube slider (youtube-carousel.js calls the lazyload function on those pages)
-    - "!assets/js/StickyTableHeader.js" # Small sticky table header jquery library for on schedule pages only
-    - "!assets/js/StickyTableCustom.js" # Custom JS to initiate the afforementioned small sticky table header jquery library
-    - "!assets/js/sliders.js" # custom slick slider JS
-    - "!assets/js/schedule.js" # Custom JS for schedule pages
-    - "!assets/js/youtube-carousel.js" # Custom JS for YouTube video carousel
-    - "!assets/js/init.js" # Initiate the schedule.js
-    - "assets/js/lazyload.js" # lazload.js called within youtube-carousel.js
-    - "assets/js/accordian.js"
-    - "!assets/js/toggle.js"
+    - "assets/js/minimal/lazyload.js" # lazload.js called within youtube-carousel.js
+    - "assets/js/minimal/accordian.js"
+  #  - "!assets/js/toggle.js"
+
+scheduleJavascript:
+  dest:
+    jekyllRoot: "assets/js/schedule/"
+    buildDir: "_site/assets/js/schedule/"
+  filename: "schedule.min.js"
+  notification: "Running Schedule Page JavaScript"
+  src:
+    - "assets/js/schedule/stickyTableHeader.js"
+    - "assets/js/schedule/stickyTableCustom.js"
+    - "assets/js/schedule/schedule-pages.js"
+    - "assets/js/schedule/initSchedulePage.js"
+
+lazyJavascript:
+  dest:
+    jekyllRoot: "assets/js/lazy/"
+    buildDir: "_site/assets/js/lazy/"
+  filename: "lazyLoad.min.js"
+  notification: "Running Lazy Load JavaScript"
+  src:
+    - "assets/js/lazy/lazyLoadOnly.js"
+
+
+custom:
+  dest:
+    jekyllRoot: "assets/js/custom/"
+    buildDir: "_site/assets/js/custom/"
+  filename: "all.min.js"
+  notification: "Running JavaScript"
+  src:
+    - "assets/js/custom/sliders.js" # custom slick slider JS
+    - "assets/js/custom/schedule.js" # Custom JS for schedule pages
+    - "assets/js/custom/youtube-carousel.js" # Custom JS for YouTube video carousel
+    - "assets/js/custom/init.js" # Initiate the schedule.js
+    - "assets/js/custom/lazyload.js" # lazload.js called within youtube-carousel.js
+  #  - "!assets/js/accordian.js"
+
+minimal:
+  dest:
+    jekyllRoot: "assets/js/minimal/"
+    buildDir: "_site/assets/js/minimal/"
+  filename: "minimal.min.js"
+  notification: "Running JavaScript"
+  src:
+    - "assets/js/minimal/lazyload.js" # lazload.js called within youtube-carousel.js
+    - "assets/js/minimal/accordian.js"
+  #  - "!assets/js/toggle.js"
+
+schedule:
+  dest:
+    jekyllRoot: "assets/js/schedule/"
+    buildDir: "_site/assets/js/schedule/"
+  filename: "schedule.min.js"
+  notification: "Running Schedule Page JavaScript"
+  src:
+    - "assets/js/schedule/stickyTableHeader.js"
+    - "assets/js/schedule/stickyTableCustom.js"
+    - "assets/js/schedule/schedule-pages.js"
+    - "assets/js/schedule/initSchedulePage.js"
+
+lazy:
+  dest:
+    jekyllRoot: "assets/js/lazy/"
+    buildDir: "_site/assets/js/lazy/"
+  filename: "lazyLoad.min.js"
+  notification: "Running Lazy Load JavaScript"
+  src:
+    - "assets/js/lazy/lazyLoadOnly.js"
 
 sitemap:
   src:
@@ -114,6 +172,7 @@ watch: # 'Watch' for changes in all the following:
   javascript:
     - "assets/js/all.min.js"
     - "assets/js/*.js"
+    - "assets/js/**/*.js"
   sass: "assets/scss/**/*.scss"
   contentSass: "assets/scss/**/*.scss"
   pages:
